--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGODB_URL=
+MONGODB_URL=mongodb+srv://menessp:B2GWTHPP@cluster0.ucylq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
