--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "w6_3133_nodejs_express_apollo_graphql",
   "version": "1.0.0",
-  "description": "Advanve mongodb, mongoos and express",
+  "description": "Advanced mongodb, mongoos and express",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
